styles/typography.css
/* ... */
table tr > *::before { margin-right: 1ch }
table tr > *::after  { margin-left: 1ch }

table > thead, table > tfoot, table > tbody {}
table > thead::before, table > tfoot::before, table > tbody::before, table > caption::before,
table > thead::after, table > tfoot::after, table > tbody::after, table > caption::after {
  text-indent: 1ch;
  line-height: calc(1em * var(--GOLDEN-RATIO));
}

table > caption {
  padding: 1ch;
  margin: 1ch 0;
  text-align: inherit;
  line-height: calc(var(--GOLDEN-RATIO) * 1em);
}
table > caption::before, table > caption::after {
  margin-block: 1ch;
}

table > thead { padding-inline: 1ch }
table > thead::before, table > thead::after { margin-block: 1ch }

table > tfoot { padding: 1ch }
table > tfoot::before, table > tfoot::after { margin-block: 1ch }

table > tbody { padding-block: 1ch }
table > tbody::before, table > tbody::after { margin-inline: 1ch }

tbody tr { margin-inline: 1ch }

details { /* details */
  margin: var(--margin);
  text-align: var(--text-align);
  padding: 0 0 0 var(--line-height);
}
nav details, nav summary {
  margin: 0;
  padding: 0;
}
body > header details
  { padding-left: 0 }
nav  details {
  /* display: list-item; */
  list-style-type: '😕';
}
nav > details[open] {
  list-style-type: '😊';
}

summary { /* summary */
  font-weight: bolder;
  padding-bottom: 0.618em;
  font-size: larger;
  margin-left: -1.618em /* compensate for <details> padding */;
}
details > summary
{
  margin-left: 0;
  text-align: start;
}

/* fieldset / legend */
fieldset
  { }
legend {
  font-weight: bold;
  margin: var(--margin);
  font-size: var(--larger);
  padding: var(--margin-collapse-bugfix) var(--line-height);
}

